[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = 'Primitive types for Centrifuge'
edition = '2021'
license = "LGPL-3.0"
name = 'cfg-primitives'
repository = "https://github.com/centrifuge/centrifuge-chain/proofs"
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', features = ['derive'], default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119" }

# substrate primitives dependencies
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }

# substrate frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }

[features]
default = ['std']
runtime-benchmarks = []
std = [
  'codec/std',
  'sp-std/std',
  'scale-info/std',
  'sp-core/std',
  'frame-support/std',
  'sp-runtime/std',
  'frame-system/std',
  'pallet-collective/std',
  'sp-consensus-aura/std',
]
