[package]
name = "runtime-integration-tests"
version = "0.1.0"
authors = ["Centrifuge <admin@centrifuge.io>"]
edition = "2021"
license = "LGPL-3.0"
homepage = "https://centrifuge.io/"
repository = "https://github.com/centrifuge/centrifuge-chain"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0", default-features = false, features = ["derive"] }
fudge = { git = "https://github.com/centrifuge/fudge", branch = "polkadot-v0.9.29" }
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.119" }
tokio = { version = "1.15", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.2"

# Substrate
## Substrate-Frame
frame-benchmarking = { git = "https://github.com/paritytech/substrate", optional = true, branch = "polkadot-v0.9.31" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }

## Substrate-Primitives
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

## Substrate-Client
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["rocksdb", "test-helpers"], branch = "polkadot-v0.9.31" }

# Polkadot
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }

# Orml pallets
orml-asset-registry = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.29" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29" }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29" }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.29" }

# Misc
xcm-emulator = { git = "https://github.com/shaunxw/xcm-simulator", branch = "master" }

# Local
altair-runtime = { path = "../altair" }
centrifuge-runtime = { path = "../centrifuge" }
cfg-primitives = { path = "../../libs/primitives" }
cfg-traits = { path = "../../libs/traits" }
development-runtime = { path = "../development" }
runtime-common = { path = "../common" }

[dev-dependencies]
hex = { version = "0.4.3", default_features = false }

cfg-traits = { path = "../../libs/traits" }
cfg-types = { path = "../../libs/types" }
pallet-connectors = { path = "../../pallets/connectors" }
pallet-loans = { path = "../../pallets/loans" }
pallet-permissions = { path = "../../pallets/permissions" }
pallet-pool-registry = { path = "../../pallets/pool-registry" }
pallet-pool-system = { path = "../../pallets/pool-system" }

sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.31" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = true, branch = "release-v0.9.31" }

[features]
default = ["runtime-development"]
runtime-benchmarks = ["default", "development-runtime/runtime-benchmarks", "frame-benchmarking/runtime-benchmarks"]
runtime-development = []
runtime-altair = []
runtime-centrifuge = []
